update jsx file pagination

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,3 +16,17 @@ img:hover {
   
   scale: 102%;
 }
+
+.loading {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background:#40EFFF;
+  -webkit-mask:radial-gradient(circle closest-side at 50% 40%,#0000 94%, #000);
+  transform-origin: 50% 40%;
+  animation: s5 1s infinite linear;
+}
+
+@keyframes s5 {
+  100% {transform: rotate(1turn)}
+}
